# edge-system

./: .devcontainer.json  Cargo.toml  rust-toolchain.toml
proto/: event.proto
src/: camera.rs  eventpb.rs  lib.rs  mq.rs
